--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         alert("hello guys");
     </script> -->
     <script src="topic1.js"></script>
+    <script src="topic2.js"></script>
 </body>
 </html>
