--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     </script> -->
     <script src="topic1.js"></script>
     <script src="topic2.js"></script>
+    <script src="topic3.js"></script>
 </body>
 </html>
