--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
 </head>
 <body>
     <!-- <h1 onclick="alert('Hello')">Title</h1> -->
+     <!-- <div>
+        <h1></h1>
+     </div> -->
+     <!-- <h1 id="title" class="title">Title1</h1>
+     <h1 id="title" class="title">Title2</h1> -->
+     <!-- <div class="parent">
+        <h1>Children title</h1>
+        <p>paragraph</p>
+     </div> -->
+
+     <!-- <h1 onclick="console.log('click happend')">Clickable title</h1> -->
+
+     <!-- <h1 onclick="handleClick()">Clickable title</h1> -->
+     <!-- <h1 id="title">Clickable title</h1>
+     <h2 id="subtitle">Another Element</h2> -->
+     <!-- <input id="inp" type="text" name="" id="" placeholder="Enter your name">
+     <button id="btn">Sign Up</button> -->
+
+     <form id="registerForm">
+        <input type="text" name="name" id="">
+        <input type="text" name="password" id="">
+        <input type="submit">
+     </form>
 
     <!-- <script>
         alert("hello guys");
@@ -16,5 +39,7 @@
     <script src="topic3.js"></script>
     <script src="topic4.js"></script>
     <script src="topic5.js"></script>
+    <script src="topic6.js"></script>
+    <script src="topic7.js"></script>
 </body>
 </html>
