--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <script src="topic5.js"></script>
     <script src="topic6.js"></script>
     <script src="topic7.js"></script>
+    <script src="topic8.js"></script>
 </body>
 </html>
