--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
     <script src="topic6.js"></script>
     <script src="topic7.js"></script>
     <script src="topic8.js"></script>
+    <script src="topic9.js"></script>
 </body>
 </html>
