--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     <script src="topic9.js"></script>
     <script src="topic10.js"></script>
     <script src="topic11.js"></script>
+    <script src="topic12.js"></script>
 </body>
 </html>
